# pifr

./: .gitignore  .pdm-python  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
src/pifr/: main.py
src/pifr/commands/: host.py  ssh.py
