[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pifr"
version = "0.0.0"
description = "Default template for PDM package"
authors = [
    {name = "ZHOU Cheng", email = "c.zhou@live.com"},
]
dependencies = ["click==8.1.8"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
pifr = "pifr.main:main"
