[build-system]
requires = ["pdm-backend", "pdm-build-locked"]
build-backend = "pdm.backend"

[project]
name = "pifr"
version = "0.1.0"
description = "Pull docker image from remote host"
authors = [
    {name = "ZHOU Cheng", email = "c.zhou@live.com"},
]
dependencies = ["click==8.1.8", "rich==13.9.4"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["ssh", "docker", "image"]
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/ldsink/pifr"
Repository = "https://github.com/ldsink/pifr"

[dependency-groups]
dev = [
    "ruff==0.9.7",
    "bump-my-version==0.32.2",
]

[project.scripts]
pifr = "pifr.main:cli"

[tool.ruff]
target-version = "py313"
line-length = 150
lint.select = [
    "F", # https://beta.ruff.rs/docs/rules/#pyflakes-f
    "E", "W", # https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "I",  # https://beta.ruff.rs/docs/rules/#isort-i
    "UP",  # https://beta.ruff.rs/docs/rules/#pyupgrade-up
    "S",  # https://beta.ruff.rs/docs/rules/#flake8-bandit-s
    "B",  # https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
    "A",  # https://beta.ruff.rs/docs/rules/#flake8-builtins-a
    "C4",  # https://beta.ruff.rs/docs/rules/#flake8-comprehensions-c4
    "ICN",  # https://beta.ruff.rs/docs/rules/#flake8-import-conventions-icn
    "G",  # https://beta.ruff.rs/docs/rules/#flake8-logging-format-g
    "PIE",  # https://beta.ruff.rs/docs/rules/#flake8-pie-pie
    "T20",  # https://beta.ruff.rs/docs/rules/#flake8-print-t20
    "RET",  # https://beta.ruff.rs/docs/rules/#flake8-return-ret
    "SIM",  # https://beta.ruff.rs/docs/rules/#flake8-simplify-sim
    "TID",  # https://beta.ruff.rs/docs/rules/#flake8-tidy-imports-tid
    "PTH",  # https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
    "PD",  # https://beta.ruff.rs/docs/rules/#pandas-vet-pd
    "NPY",  # https://beta.ruff.rs/docs/rules/#numpy-specific-rules-npy
    "RUF100",  # https://beta.ruff.rs/docs/configuration/#automatic-noqa-management
]
lint.ignore = [
    "A003", # Class attribute ... is shadowing a python builtin
    "B005", # use strip with multi-char
    "B904", # raise ... from ...
    "B905", # zip without an explicit strict
    "E501", # line length violations
    "RET504", # variable assignment before `return`
    "RUF100", # [*] Unused blanket `noqa` directive
    "S105", # possible hardcoded password
    "S106", # possible hardcoded password
    "S108", # Probable insecure usage of temporary file or directory: "/tmp/"
    "S311", # pseudo-random generators
    "SIM102", # don't use nested if
    "SIM108", # use xx if xx else xx instead of `if`-`else`-block
    "S307", # use of mark_safe
    "S603", # `subprocess` call: check for execution of untrusted input
    "S607", # Starting a process with a partial executable path
    "S608", # hardcoded sql
]
include = [
    "*.pyi",
    "*.py",
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".idea",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # unused imports
]

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = true
tag_name = "{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
